--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,32 @@
 {
-    "name": "verrucktua/dns-library",
-    "description": "A PHP library for retrieving DNS records for a specified domain name",
-    "type": "library",
-    "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "DnsLibrary\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "DnsLibrary\\Tests\\": "tests/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.0"
-    },
-    "scripts": {
-        "test": "phpunit"
+  "name": "verrucktua/dns-library",
+  "description": "A PHP library for retrieving DNS records for a specified domain name",
+  "authors": [
+    {
+      "name": "VerrucktUA",
+      "email": "verrucktua@gmail.com"
     }
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^8.0",
+    "illuminate/support": "^9.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "DnsLibrary\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "DnsLibrary\\Tests\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev"
 }
